--- a/mandelbulber2/qt/material_editor.ui
+++ b/mandelbulber2/qt/material_editor.ui
@@ -128,9 +128,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-3287</y>
+        <y>-2449</y>
         <width>466</width>
-        <height>4399</height>
+        <height>4474</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -2768,7 +2768,7 @@ direction vector:</string>
           <item>
            <widget class="MyGroupBox" name="groupCheck_perlin_noise_color_enable">
             <property name="title">
-             <string>Use perlin noise for brightness</string>
+             <string>Use perlin noise for color</string>
             </property>
             <property name="checkable">
              <bool>true</bool>
@@ -3699,6 +3699,81 @@ direction vector:</string>
                 </widget>
                </item>
               </layout>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
+           <widget class="MyGroupBox" name="groupCheck_perlin_noise_luminosity_enable">
+            <property name="title">
+             <string>Use perlin noise for luminosity</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_30" rowstretch="0,0" columnstretch="0,1">
+             <property name="leftMargin">
+              <number>2</number>
+             </property>
+             <property name="topMargin">
+              <number>2</number>
+             </property>
+             <property name="rightMargin">
+              <number>2</number>
+             </property>
+             <property name="bottomMargin">
+              <number>2</number>
+             </property>
+             <property name="spacing">
+              <number>2</number>
+             </property>
+             <item row="0" column="1">
+              <widget class="MyDoubleSpinBox" name="spinbox_perlin_noise_luminosity_intensity">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Contrast of color texture&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="prefix">
+                <string/>
+               </property>
+               <property name="suffix">
+                <string/>
+               </property>
+               <property name="decimals">
+                <number>2</number>
+               </property>
+               <property name="minimum">
+                <double>0.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000.000000000000000</double>
+               </property>
+               <property name="singleStep">
+                <double>0.100000000000000</double>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_49">
+               <property name="text">
+                <string>intensity</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" colspan="2">
+              <widget class="MyCheckBox" name="checkBox_perlin_noise_luminosity_invert">
+               <property name="text">
+                <string>invert</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </widget>
