transf_spherical_fold_xyz_bias.ui correct and update

--- a/mandelbulber2/formula/ui/pseudo_kleinian_mod1.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian_mod1.ui
@@ -1895,7 +1895,7 @@
            </font>
           </property>
           <property name="text">
-           <string>z tweak scale:</string>
+           <string>z scale:</string>
           </property>
          </widget>
         </item>
@@ -4062,14 +4062,14 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
